--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
             <a href="Interactive Scene">Interactive Scene</a>
         </li>
     </ul>
+    <ul>
+        <li>
+            <a href="Traffic Light">Traffic Light</a>
+        </li>
+    </ul>
 </body>
 </html>
