Started on state variables assignment

--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
     </ul>
     <ul>
         <li>
-            <a href="Interactive Scene">Interactive Scene</a>
+            <a href="Interactive Scene">"Money Clicker Game" Interactive Scene</a>
         </li>
     </ul>
     <ul>
         <li>
             <a href="Traffic Light">Traffic Light</a>
+        </li>
+    </ul>
+    <ul>
+        <li>
+            <a href="State Variables">"Tic Tac Toe" State Variables Assignment</a>
         </li>
     </ul>
 </body>
