--- a/State Variables/index.html
+++ b/State Variables/index.html
@@ -7,7 +7,9 @@
     <!-- <script src="js/p5.dom.min.js"></script> -->
     <script src="js/p5.sound.min.js"></script>
     <!-- <script src="js/p5.collide2d.min.js"></script> -->
-    <script src="sketch.js"></script>
+    <script src="setup.js"></script>
+    <script src="mousePressedFunctions.js"></script>
+    <script src="mainLoops.js"></script>
   </head>
   <body>
   </body>
