Added link to new wizard game to main site

--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
             <a href="State Variables">"Tic Tac Toe" State Variables Assignment</a>
         </li>
     </ul>
+    <ul>
+        <li>
+            <a href="New Wizard Game/">2D Grid Assignment (Start of Major Project)</a>
+        </li>
+    </ul>
 </body>
 </html>
