--- a/New Wizard Game/index.html
+++ b/New Wizard Game/index.html
@@ -9,7 +9,9 @@
     <!-- <script src="js/p5.collide2d.min.js"></script> -->
     <script src="classes.js"></script>
     <script src="setup.js"></script>
-    <script src="sketch.js"></script>
+    <script src="menus.js"></script>
+    <script src="game.js"></script>
+    <script src="main.js"></script>
   </head>
   <body>
   </body>
